fixed draagable boxes can not be released on mobile devices

--- a/src/styles/floating_box.css
+++ b/src/styles/floating_box.css
@@ -22,6 +22,7 @@
 }
 
 .drag-button {
+    pointer-events: auto;
     position: absolute;
     top: 5px;
     left: 5px;
